testdata/parse-errors/specs/tableLocationNotSpecified.spec
# Spec
table:
## Scenario
* step1